test/1.2/errors/T_ESYNTAX_15.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

method test -> (bool ok) {
    /// ERROR ESYNTAX
    local const char *a = "\q\0\a\v\'\e";
    ok = false;
}
